[project]
name = "dubai-news-rt"
version = "0.1.0"
description = "Dubai News Aggregator Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "requests",
    "pydantic",
    "python-dotenv",
    "beautifulsoup4"
]

[tool.setuptools]
py-modules = ["main"]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
